--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "myserver",
-  "version": "1.0.0",
+  "name": "simple-server",
+  "version": "0.1.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/server",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.34",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^7.2.0",
+    "nodemon": "^2.0.16",
+    "typescript": "^4.6.4"
+  },
   "scripts": {
-    "start": "nodemon server.js"
+    "build": "tsc",
+    "start": "yarn serve",
+    "serve": "concurrently \"tsc --watch\" \"nodemon dist/server.js\""
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Hasan Shingieti",
+  "license": "ISC",
+  "repository": "https://github.com/halshing/simple-server.git"
 }
